--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
     min-height: 100vh;
     background: linear-gradient(80deg, var(--secondary), var(--dark));
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 /** sections */
@@ -71,7 +72,7 @@ section {
     position: relative;
     display: block;
     left: -100%;
-    transition: opacity 0.8s, left 0.6s;
+    transition: opacity 0.8s, 0.6s;
     transition-delay: 0s, calc(60ms * var(--delay));
     color: var(--light);
     font-size: 1.875rem;
@@ -85,6 +86,10 @@ section {
 
 .menu-items:hover > .menu-item:hover {
     opacity: 1;
+}
+
+.menu-btn {
+    cursor: pointer;
 }
 
 .menu-btn:focus + .menu-items {
