--- a/style.css
+++ b/style.css
@@ -55,12 +55,15 @@ section {
 .menu {
     position: fixed;
     padding: 1rem;
+    width: 0;
+    height: 0;
     z-index: 100;
-    height: 100%;
     transition: 0.6s;
 }
 
 .menu:focus-within {
+    width: fit-content;
+    height: 100%;
     backdrop-filter: blur(20px);
 }
 
@@ -184,6 +187,7 @@ section {
 .profile-name {
     font-size: 2.25rem;
     line-height: 2.5rem;
+    margin-top: 0.75rem;
 }
 
 /** card with stack */
@@ -330,11 +334,16 @@ section {
     text-decoration: underline;
 }
 
+.project-link:hover {
+    transform: scale(1.05);
+}
+
 .project-img {
     max-width: 100%;
     max-height: 12rem;
     padding: 1rem;
     border: 0.0625rem solid var(--lightTransparent);
+    transition: 0.5s;
 }
 
 /** contacts section */
